Fix positioning of main-coverSlotCollapsed-expandButton in _snippets.scss

--- a/Comfy/assets/_snippets.scss
+++ b/Comfy/assets/_snippets.scss
@@ -234,7 +234,6 @@
 									}
 
 									.main-coverSlotCollapsed-expandButton {
-										right: 21%;
 										top: 3%;
 									}
 
